fixing html and body height on mobile devices

--- a/dev/CSS/styles.css
+++ b/dev/CSS/styles.css
@@ -96,7 +96,7 @@
 /*Footer*/
 .footer{
     padding-top: 5px;
-    bottom: 0;
+    bottom: 0 !important;
     text-align: center;
     font-size: 12pt;
     font-family: Arial;
@@ -108,6 +108,9 @@
 
 
 /*Common to All pages*/
+html, body{
+    height: 100%;
+}
 .hyperlink,
 .hyperlink:hover,
 .hyperlink:visited,
